# lexaprendiz1

./: .gitignore  .stignore  .streamlit_ignore  CORRECOES_LEXAPRENDIZ.md  FERRAMENTAS_JURIDICAS.md  INTEGRACAO_ADK.md  LEXAPRENDIZ.md  README.md  app_stability.py  auth_system.py  banco_conhecimento.py  conap_database.py  content_manager.py  content_settings.json  ferramentas_juridicas.py  logo_base64.py  pyproject.toml  requirements.txt  requirements_backup.txt  streamlit_app.py  streamlit_app_backup.py  streamlit_app_full.py  streamlit_app_minimal.py  streamlit_app_stable_final.py  users_database.json  web_app.py  web_app_stable.py
.streamlit/: config.toml
base/: agent.py
lexaprendiz/: agent.py
search/: agent.py
